--- a/Python/SAP report.ipynb
+++ b/Python/SAP report.ipynb
@@ -12,6 +12,7 @@
     "import subprocess\n",
     "import time\n",
     "import win32com.client\n",
+    "import sys\n",
     "\n",
     "# 强制关闭 Excel 的函数\n",
     "def close_excel():\n",
